# kettlingar

./: CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pre-push.githook  pyproject.toml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
docs/: CNAME
examples/: filecat.py  htmx.py  kitten.cfg  kitten.py  public.py  test_filecat.py  test_kitten.py  test_kitten_sync.py
examples/htmx_static/: default.css
examples/htmx_templates/: base.jinja  root.jinja
src/kettlingar/: __init__.py  __main__.py  __version__.py  asynctools.py  metrics.py  rpckitten.py  str_utils.py  tlskitten.py  webkitten.py
src/kettlingar/templates/: base.jinja  help.jinja
tests/: test_fd_passing.py  test_kitten.py  test_kitten_sync.py  test_metrics.py  test_tlskitten.py  test_webkitten.py
