[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kettlingar"
description = "Cute asyncio HTTP-RPC microservices"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "appdirs>=1.4.4",
    "msgpack>=1.0.8",
    "setproctitle>=1.3.3"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kettlingar*"]

[tool.setuptools.dynamic]
version = {attr = "kettlingar.__version__.__version__"}

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["I"]# implementation for isort

[project.optional-dependencies]
dev = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "uv>=0.5.12",
]
public = [
    "upagekite>=0.3.2",
]
