[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kettlingar"
description = "Cute asyncio HTTP-RPC microservices"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "appdirs>=1.4.4",
    "msgpack>=1.0.8",
    "setproctitle>=1.3.3"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kettlingar*"]

[tool.setuptools.dynamic]
version = {attr = "kettlingar.__version__.__version__"}

[tool.pylint]
disable = [
    "C0209",  # Consider using f-string
    "C0325",  # Unnecessary parens
    "C0415",  # Import outside toplevel
    'R0801',  # Similar lines in multiple files
    'R0903',  # Too few public methods
    "E1101",  # Instance of ... has no ... member
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pylint>=4.0.2",
    "jinja2>=3.1.6",
]
public = [
    "upagekite>=0.3.2",
]
